# content_summarizer

./: .env-example  .gitignore  Readme.md  cache.py  cache_manager.py  download.py  main.py  path_manager.py  pyproject.toml  resume.py  resume_service.py  transcribe.py  transcription_service.py  video_service_interface.py  youtube.py  youtube_service.py
cache/TucmVFrZptU/: cache.json
flask_api/: .env-example  app.py  requirements.txt
resumes/: resume.md
src/: __init__.py  audio_processor.py  cache_manager.py  cli.py  config_manager.py  core.py  data_models.py  logger_config.py  main.py  path_manager.py  resume_service.py  summary_service.py  transcription_service.py  video_service_interface.py  warning_config.py  youtube_service.py
src/cache/ttzsxHVp2Aw/: metadata.json
src/content_summarizer/: cli.py  core.py  main.py
src/content_summarizer/data/: __init__.py  data_models.py
src/content_summarizer/managers/: cache_manager.py  config_manager.py  path_manager.py
src/content_summarizer/processors/: audio_processor.py
src/content_summarizer/services/: __init__.py  summary_service.py  transcription_service.py  youtube_service.py
src/content_summarizer/utils/: __init__.py  logger_config.py  (+1 more)
src/data/: __init__.py  data_models.py
src/managers/: __init__.py  cache_manager.py  config_manager.py  path_manager.py
src/processors/: __init__.py  audio_processor.py
src/services/: __init__.py  transcription_service.py  video_service_interface.py  youtube_service.py
src/utils/: __init__.py  logger_config.py
transcriptions/: transcription.txt
