[project]
name = "content-summarizer"
version = "0.1.0"
description = "A flexible platform for processing and summarizing various types of content (videos, articles, audio) using AI models."
requires-python = ">=3.11"

dependencies = [
    "flask",
    "openai-whisper",
    "google-generativeai",
    "python-dotenv",
    "pytubefix",
    "requests",
    "colorlog>=6.9.0",
]

[project.optional-dependencies]
dev = [
    "ruff",
    "mypy",
]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "C90", "UP", "D", "SIM", "T20", "ANN", "PTH", "RET", "ERA"]
ignore = ["T201", "COM812", "ANN101", "ANN102"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pyright]
reportMissingTypeStubs = false
reportPrivateImportUsage = false

[tool.setuptools]
package-dir = {"" = "src"}
